# compression-dictionaries-fwf

./: README.md
cdict-proxy/: .gitignore  Makefile  package-lock.json  package.json  readme.md  spin.toml  tsconfig.json  webpack.config.js
cdict-proxy/.wit/components/cdict-proxy/: deps.wit
cdict-proxy/@spin-deps/component-compressor/: index.js  package.json
cdict-proxy/@spin-deps/component-compressor/types/: test.d.ts
cdict-proxy/@spin-deps/component-compressor/types/interfaces/: component-compressor-compress.d.ts
cdict-proxy/@spin-deps/component-compressor/wit/: world.wit
cdict-proxy/api/: knitwit.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
cdict-proxy/api/config/: knitwit.json
cdict-proxy/api/src/: compression.ts  dictionaries.ts  index.ts  proxy.ts
cdict-proxy/api/src/config/: DebugConfig.ts  ProxyConfig.ts
cdict-proxy/assets/dictionaries/: big-specific.dict
cdict-proxy/assets/files/: main.v2.js
cdict-proxy/assets/pages/: index.html  load-dict.html  test-dict.html
cdict-proxy/assets/train/: small.txt
cdict-proxy/compressor/: Cargo.toml  readme.md
cdict-proxy/compressor/src/: bindings.rs  lib.rs  zstd_compressor.rs
cdict-proxy/compressor/testdata/: v1.dict
cdict-proxy/compressor/wit/: world.wit
cdict-proxy/config/: knitwit.json
cdict-proxy/src/: dictionaries.ts  index.ts  proxy.ts
cdict-proxy/src/compression/: ZstdCompressor.ts
