[package]
name = "cmprsn-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.38.0", features = ["bitflags"] }
zstd = "0.13.2"

[lib]
crate-type = ["cdylib"]


[package.metadata.component]
package = "component:compressor"

[package.metadata.component.dependencies]
